# basic_monty_py

01_basis/: basis.py  convertions.py  incorporated_functions.py  inmutable.py  inputs.py  math_operations.py  mini_porject.py  string_indexes.py
02-condicionales/: 02-operador_ternario.py  05-none.py  06-logical_operators.py  07-comparation_operators.py  08-membership_operators.py  09-is_equal.py  10_short_circuiting.py  11-flow_control.py
02_condicionales/: 01-if_conditional.py  02-elif_conditional.py  04-truthy_falsey.py  12-mini_project.py
03-listas/: 01-lists.py  02-list_slicing.py  03-list_methods_adding.py  04-list_methods_remove.py  05-list_methods_search.py  06-list_methods_sort.py  07-list_others.py  08-matrix.py  09-list_unapacking.py  10-tarea_listas.py
04-diccionarios/: 01-dictionaries.py  02-keys.py  03-dictionaries_methods_searchs.py  04-dictionaries_methods_add_remove.py
04_diccionarios/: 05-dictionaries_exercise.py
05-tuplas_sets/: 01-tuple.py  02-sets.py  03-set_methods_part1.py  04-set_methods_part2.py  05-set_methods_part3.py  06-sets_exercise.py  07-converts.py
06-loops/: 01-for_loops.py  02-iterables.py  03-range.py  04-enumerate.py  05-while.py  06-break_continue_pass.py  07-for_vs_while.py  08-listas_anidadas.py  09-nested_dict.py  10-loops_exercise.py  11-miniproject.py
07-functions/: 01-functions.py  02-return.py  03-parameters_arguments.py  04-default_param_keyword_arg.py  05-docstring.py  06-scopes.py  07-global_keyword.py  09-args_kwargs.py  (+2 more)
12-virtual_enviroments/poetry/: beauty.py  my_poetry_test.py  prueba.py  pyproject.toml
(+56 files in other folders)
