[project]
name = "example"
version = "0.1.0"
description = "Mi ejemplo"
authors = [
    {name = "JoMaPeTe",email = "jmperezterrero@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "emoji (>=2.15.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
